--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -262,10 +262,10 @@
       </div>
       <form id="checkoutForm" novalidate>
         <div class="row">
-          <div><label>Full name</label><input id="name" type="text" placeholder="Sumaiya Dingankar" required></div>
+          <div><label>Full name</label><input id="name" type="text" placeholder="Enter Your Name" required></div>
           <div><label>Email</label><input id="email" type="email" placeholder="you@example.com" required></div>
           <div><label>Mobile</label><input id="mobile" type="tel" placeholder="+91 98xxxxxxx" required></div>
-          <div><label>City</label><input id="city" type="text" placeholder="Pune" required></div>
+          <div><label>City</label><input id="city" type="text" placeholder="city" required></div>
           <div class="full"><label>Address</label><textarea id="address" placeholder="House no, area, landmark..."
               required></textarea></div>
           <div><label>Pincode</label><input id="pincode" type="text" placeholder="4110xx" required></div>
@@ -321,7 +321,7 @@
           <div><label>CVV</label><input id="cardCvv" maxlength="4" placeholder="123"></div>
         </div>
         <label style="margin-top:12px;">Name on card</label>
-        <input id="cardName" placeholder="Sumaiya Dingankar">
+        <input id="cardName" placeholder="Name on card">
         <div style="display:flex;gap:10px;margin-top:14px;">
           <button id="btnPayNow" class="btn-primary">Pay ₹0</button>
         </div>
@@ -457,5 +457,6 @@
   </script>
 
 </body>
+
 
 </html>
