--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-Commerce Project by Sumaiya Dingankar - HTML, CSS, JS</title>
+  <title>Sumaiya Modest Collections</title>
 
   <meta name="description"
     content="A beginner e-commerce project created using HTML, CSS, and JavaScript by Sumaiya Dingankar.">
@@ -389,5 +389,6 @@
   <script src="./assets/js/featured-products.js"></script>
   <script src="./assets/js/script.js?v=1.0" type="module"></script>
 </body>
+
 
 </html>
