--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             a space that respects your values while enhancing your natural elegance.
             Feel beautiful, confident, and comfortable in every moment.
           </p>
-          <button><a class="shopNowBtn" href="./pages/shop.html">SHOP NOW</a><i
-              class='bx bx-right-arrow-alt'></i></button>
+        <a class="shopNowBtn" href="./pages/shop.html">SHOP NOW <i class='bx bx-right-arrow-alt'></i>
+          </a>
 
           <div class="home_social_icons">
             <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -392,3 +392,4 @@
 
 
 </html>
+
