--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - Sumaiya Trendy Collections</title>
+  <title>Contact Us - Sumaiya Modest Collections</title>
   <!-- favicon -->
   <link rel="icon" href="https://res.cloudinary.com/dzpjquuvs/image/upload/v1765711251/contact-favicon_uvldgc.png"
     type="image/x-icon">
@@ -192,5 +192,6 @@
   <script src="../assets/js/global.js"></script>
   <script src="../assets/js/script.js?v=1.0" type="module"></script>
 </body>
+
 
 </html>
