--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Sumaiya Trendy Collection</title>
+  <title>About Us | Sumaiya Modest Collection</title>
 
   <!-- Favicon -->
   <link rel="icon" href="https://res.cloudinary.com/dzpjquuvs/image/upload/v1765196482/about_icu8l5.png"
@@ -252,5 +252,6 @@
   <script src="../assets/js/script.js?v=1.0" type="module"></script>
 
 </body>
+
 
 </html>
