--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Checkout — Sumaiya Trendy Collection</title>
+  <title>Checkout — Sumaiya Modest Collection</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
   <style>
@@ -460,3 +460,4 @@
 
 
 </html>
+
